--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michal Bartoš | IT Student & Vývojář</title>
-    <meta name="description"
-        content="Osobní web Michala Bartoše, studenta 3. ročníku IT na Střední průmyslové škole Příbram.">
+    <meta name="description" content="Osobní web Michala Bartoše, studenta IT.">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 
@@ -36,10 +33,9 @@
         <section id="home" class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <span class="badge">Student 3. ročníku IT</span>
-                    <h1>Michal Bartoš</h1>
-                    <p class="subtitle">Studuji na <span>Střední průmyslové škole Příbram</span> a fascinuje mě svět
-                        technologií, programování a digitálního designu.</p>
+                    <span class="badge" id="role">Načítám...</span>
+                    <h1 id="name"></h1>
+                    <p class="subtitle">Studuji na <span>Střední průmyslové škole Příbram</span> a fascinuje mě svět technologií, programování a digitálního designu.</p>
                     <div class="hero-cta">
                         <a href="#contact" class="btn btn-primary">Kontaktujte mě</a>
                         <a href="#about" class="btn btn-secondary">Více o mně</a>
@@ -65,12 +61,7 @@
                 </div>
                 <div class="about-grid">
                     <div class="about-text">
-                        <p>Ahoj! Jsem Michal a momentálně studuji ve třetím ročníku na <strong>SPŠ Příbram</strong> se
-                            zaměřením na informační technologie. Moje cesta do světa IT začala zvědavostí, jak věci
-                            fungují pod kapotou, a postupně se vyvinula v hluboký zájem o vývoj softwaru.</p>
-                        <p>Baví mě řešit komplexní problémy a neustále se učit nové technologie. Na škole se věnujeme
-                            širokému spektru témat od sítí až po programování, což mi dává skvělý základ pro budoucí
-                            kariéru v oboru.</p>
+                        <p id="about-text">Načítání informací o mně...</p>
                         <ul class="stats">
                             <li><strong>3+</strong> Roky studia</li>
                             <li><strong>10+</strong> Školních projektů</li>
@@ -87,28 +78,7 @@
                     <h2>Dovednosti</h2>
                     <div class="underline"></div>
                 </div>
-                <div class="skills-grid">
-                    <div class="skill-card">
-                        <i data-lucide="code-2"></i>
-                        <h3>Vývoj</h3>
-                        <p>Základy HTML, CSS a JavaScriptu pro tvorbu webových aplikací.</p>
-                    </div>
-                    <div class="skill-card">
-                        <i data-lucide="terminal"></i>
-                        <h3>Algoritmy</h3>
-                        <p>Logické myšlení a řešení programátorských úloh ve školních projektech.</p>
-                    </div>
-                    <div class="skill-card">
-                        <i data-lucide="server"></i>
-                        <h3>Sítě & HW</h3>
-                        <p>Konfigurace síťových prvků a porozumění hardwarové architektuře.</p>
-                    </div>
-                    <div class="skill-card">
-                        <i data-lucide="layout"></i>
-                        <h3>Design</h3>
-                        <p>Zájem o moderní UI/UX a estetiku digitálních produktů.</p>
-                    </div>
-                </div>
+                <div class="skills-grid" id="skills-container"></div>
             </div>
         </section>
 
@@ -118,39 +88,7 @@
                     <h2>Projekty</h2>
                     <div class="underline"></div>
                 </div>
-                <div class="projects-grid">
-                    <div class="project-card">
-                        <div class="project-img">
-                            <div class="project-overlay">
-                                <a href="#" class="btn-icon"><i data-lucide="external-link"></i></a>
-                            </div>
-                        </div>
-                        <div class="project-info">
-                            <h3>Školní IS</h3>
-                            <p>Návrh a implementace jednoduchého informačního systému pro správu studentů.</p>
-                            <div class="tags">
-                                <span>C#</span>
-                                <span>SQL</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <div class="project-img">
-                            <div class="project-overlay">
-                                <a href="#" class="btn-icon"><i data-lucide="external-link"></i></a>
-                            </div>
-                        </div>
-                        <div class="project-info">
-                            <h3>Webové Portfolio</h3>
-                            <p>Moderní statický web vytvořený s důrazem na UI/UX a animace.</p>
-                            <div class="tags">
-                                <span>HTML</span>
-                                <span>CSS</span>
-                                <span>JS</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div class="projects-grid" id="projects-container"></div>
             </div>
         </section>
 
@@ -164,16 +102,8 @@
                     <div class="contact-info">
                         <h3>Pojďme se spojit</h3>
                         <p>Máte zájem o spolupráci nebo se chcete jen na něco zeptat?</p>
-                        <div class="contact-links">
-                            <a href="mailto:michal.bartos@example.cz" class="contact-item">
-                                <i data-lucide="mail"></i>
-                                <span>michal.bartos@example.cz</span>
-                            </a>
-                            <div class="contact-item">
-                                <i data-lucide="map-pin"></i>
-                                <span>Příbram, Česká republika</span>
+                        <div class="contact-links" id="contact-container">
                             </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -186,10 +116,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
-    <script>
-        lucide.createIcons();
-    </script>
+    <script src="app.js"></script>
 </body>
-
 </html>
