Create index.html with dynamic structure

--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Enter your description here">
-    <meta name="keywords" content="your, keywords, here">
-    <meta name="author" content="Your Name">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>Your Title Here</title>
-</head>
-<body>
-    <a href="#content" class="skip-link">Skip to content</a>
-    <header>
-        <h1>Your Header Here</h1>
-    </header>
-    <main id="content">
-        <img src="image.jpg" alt="Description of the image" />
-        <p>Your main content goes here.</p>
-    </main>
-    <footer>
-        <p>Your footer content here.</p>
-    </footer>
-</body>
-</html>
+<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>Dynamic Structure</title>\n    <style>\n        body { font-family: Arial, sans-serif; }\n        section { margin: 20px 0; padding: 10px; border: 1px solid #ccc; }\n    </style>\n</head>\n<body>\n    <section id="name">\n        <h2>Name</h2>\n        <p></p>\n    </section>\n    <section id="role">\n        <h2>Role</h2>\n        <p></p>\n    </section>\n    <section id="skills">\n        <h2>Skills</h2>\n        <p></p>\n    </section>\n    <section id="projects">\n        <h2>Projects</h2>\n        <p></p>\n    </section>\n    <section id="interests">\n        <h2>Interests</h2>\n        <p></p>\n    </section>\n    <section id="contact">\n        <h2>Contact</h2>\n        <p></p>\n    </section>\n</body>\n</html>
